# banshee

./: .gitmodules  CMakeLists.txt  banshee.qbs
include/banshee/: banshee.h  banshee.hpp  coro.h  lexer.h  lexer.hpp  parser.h  parser.hpp  property.h  property.hpp  unicode.h  unicode.hpp  unicode_view.hpp  utils.h
include/banshee/detail/: generator.hpp  unicode_file.hpp  util.hpp
include/banshee/ici/: ici_lexer.h  iciparser.h
include/banshee/json/: json.h  json_lexer.h  json_lexer.hpp  json_parser.h  json_parser.hpp
src/: .main.cpp.kate-swp  fix_bad_access.cpp  iciparser.cpp  main.cpp  src.qbs
tests/: file.cpp  json.cpp  property.cpp  tests.qbs  validate.cpp
